--- a/src/views/home/home.css
+++ b/src/views/home/home.css
@@ -26,7 +26,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
-    color: black;
+    color: #fff;
     text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
 }
 
